<resources>
    <string name="app_name">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="readMore">Read More</string>
    <string name="fakeText">Read More</string>
    <string name="fakeTitle">Read More</string>
    <string name="delete">delete</string>
    <string name="apply">Apply</string>
    <string name="Settings">Settings</string>
    <string name="Dark">Bright skin</string>
    <string name="Yellow">Green or yellow</string>
    <!--Home Screen-->
    <string name="imgDescription">Image Provided with article</string>

    <!--Article Buttons -->
    <string name="NoArticle">No Favorite article yet!</string>
    <string name="buttonLike">Like</string>
    <string name="error2">Cannot like this article for now! Like another one</string>
    <string name="deleteConfirmation">Article deleted</string>
    <string name="error">Cannot read this article for now! read another one</string>
    <string name="source">The source</string>
    <!--Menu Buttons -->
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="reading">Article</string> <!-- sorry for change it's a little easier to understand-->
    <string name="readingMore">Want to read more? click the link down Below</string>
    <string name="favorites">Favorites</string>
    <string name="settingButton">Settings</string>
    <string name="str">Contrary to popular belief Lorem Ipsum is not simply random text It has roots in a piece of classical Latin literature from 45 BC making it over 2000 years old Richard McClinton a Latin professor at Happen-Sydney College in Virginia looked up one of the more obscure Latin words consecrated from a Lorem Ipsum passage and going through the cites of the word in classical literature discovered the undoubtable source Lorem Ipsum comes from sections and of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero written in 45 BC This book is a treatise on the theory of ethics very popular during the Renaissance The first line of Lorem Ipsum  comes from a line in section</string>
    <string name="Text">This app was developed by John and Victoria. We are two university of Massachusetts lowell students, the idea to build this app came up in the occasion of a final project of the Mobile app development class (Fall 2022). This project uses various technology, such as API calling, recycleView,Room ORM database, ViewModel, Binding, Picasso etc. We have spent almost about one month to organise and code this app. The goal of this app is for users to be able to get free and accurate news. by building that app, we have shown that we have the skill and the education needed to accomplished more when it comes to android app development.</string>
    <string name="Search">Search for Headlines</string>
    <string name="faveConfirm">Article has been added to your favorites list!</string>
</resources>