<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/styleforviews"
    app:backgroundTint="@null"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
        android:contentDescription="@string/imgDescription"
        android:id="@+id/img"
        android:layout_width="400dp"
        android:layout_height="261dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:ellipsize="end"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/fakeTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/description"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/fakeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/description"
    app:layout_constraintBottom_toBottomOf="parent">

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/buttonAddToFav"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/likeButton"-->
<!--        app:layout_constraintHorizontal_bias="0.22"-->
<!--        android:drawableLeft="@drawable/check"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:background="@android:color/transparent" />-->

    <Button
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="64dp"
        android:text="@string/buttonLike"
        android:drawableEnd="@drawable/favorite"

        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
