<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_two"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:backgroundTint="@null">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/styleforviews"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014">

                <ImageView
                    android:id="@+id/imgTwo"
                    android:layout_width="121dp"
                    android:layout_height="123dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/imgDescription"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleTwo"
                    android:layout_width="256dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="25dp"
                    android:ellipsize="end"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/fakeTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/descriptionTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgTwo"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/descriptionTwo"
                    android:layout_width="256dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="52dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/fakeText"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.461"
                    app:layout_constraintStart_toEndOf="@+id/imgTwo" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="149dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/delete"
                    android:text="@string/delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
